kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    app: app
