kubernetes/webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "443"
      port: 443
      targetPort: 443
  selector:
    app: webserver
